[project]
name = "ai-dial-guardrails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tasks"
module-root = ""
